fix(sidenav): fix dropdown focus style in collapsed sidenav

--- a/src/Sidenav/styles/index.less
+++ b/src/Sidenav/styles/index.less
@@ -260,6 +260,10 @@
     height: @sidenav-item-height;
     // supplement padding
     padding-left: @sidenav-default-width;
+
+    &:focus {
+      .focus-ring();
+    }
   }
 
   // The same to the dropdown item
